tests/ui/fail/unnamed-struct-fields.rs
use variant_partial_eq::VariantPartialEq;

#[derive(VariantPartialEq)]
struct Unnamed(String, u32);

fn main() {}